[tool.poetry]
name = "flet-spinkit"
version = "0.1.0"
description = ""
authors = ["InesaFitsner <inesa@appveyor.com>"]
readme = "README.md"
packages = [{include = "flet_spinkit"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
